updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a computer coding student</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Pittsburgh, PA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include cooking, running, skiing and going on adventures.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be to work remotely as a full stack web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Pittsburgh, PA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer becuase I enjoy learning new skills, and think that web development is a good career.</p>
     </section>
 
     <footer id="footer">
